update column titles

--- a/flourish_reports/templates/flourish_reports/enrolment/enrolment_vs_seq_enrolment.html
+++ b/flourish_reports/templates/flourish_reports/enrolment/enrolment_vs_seq_enrolment.html
@@ -6,7 +6,7 @@
         <thead>
         <tr>
             <th>Enrolment Cohort</th>
-            <th>Sequential Cohort</th>
+            <th>Current Cohort</th>
             <th>Count</th>
         </tr>
         </thead>
